--- a/css/index.css
+++ b/css/index.css
@@ -12,16 +12,57 @@ h1, h2 {
     margin-bottom: 1rem;
 }
 
+/* Week 10: Media query style changes to 3 elements: h1, h2, ul */
+/* For h1: added tablet and desktio screen size */
+
+/* Base mobil */
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
     letter-spacing: 1px;
+    font-style: normal;
 }
 
+/* Week 10: Standard tablet (768px+) */
+@media (min-width: 768px) {
+    h1 {
+        font-size: 2.8rem;
+        font-weight: 800;
+        font-style: italic;
+    }  
+}
+
+/* Week 10: Standard desktop/laptop (1024px+) */
+@media (min-width: 1024px) {
+    h1 {
+        font-size: 3.1rem;
+        letter-spacing: 1.5px;
+        font-style: normal;
+    }  
+}
+
+/* For h2: added tablet and desktop screen size */
+/* Base mobil */
 h2 {
     font-size: 1.8rem;
     font-weight: 600;
     color: #2E4057; /* deep blue*/
+}
+
+/* Week 10: Standard tablet (768px+) */
+@media (min-width: 768px) {
+    h2 {
+        font-size: 2rem;
+        color: #1E1E1E; /* deeper darker blue */
+    }  
+}
+
+/* Week 10: Standard desktop/laptop (1024px+) */
+@media (min-width: 1024px) {
+    h2 {
+        font-size: 2.5rem;
+        letter-spacing: 0.5px;
+    }  
 }
 
 
@@ -57,10 +98,32 @@ p {
     line-height: 1.5;
 }
 
+/* For ul: added tablet and desktop screen size */
+/* Base mobil */
 ul { 
     list-style: disc;
     padding-left: 2rem;
     margin-bottom: 2rem;
+}
+
+/* Week 10: Standard tablet (768px+) */
+@media (min-width: 768px) {
+    ul {
+        background-color: #fff; /* same as in Experience */
+        padding: 1rem 1rem 1rem 3rem;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+        margin-bottom: 1rem;
+        border-radius: 8px;
+        list-style-position: inside;
+    }  
+}
+
+/* Week 10: Standard desktop/laptop (1024px+) */
+@media (min-width: 1024px) {
+    ul {
+        margin-bottom: 3rem;
+        border-radius: 8px;
+    }  
 }
 
 li {
@@ -131,12 +194,17 @@ a {
 /* Replacing the old css with the new clean card look */
 /* Flex */
 
+/* Week 10 changes: STRETCH: replacing flex with grid */
 .connect-links {
-    display: flex;
+    /* display: flex;
     justify-content: center;
+    flex-wrap: wrap;*/
     gap: 2rem;
     margin-top: 1rem;
-    flex-wrap: wrap;
+    /* Week 10 edit: */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    justify-items: center;
   }
 
   /* links style */
@@ -156,3 +224,14 @@ a {
     background-color: #e0e0e0;
   }
   
+/* Week 10 changes: 
+Adjusting for a Standard table style (768px +)
+Adjusting for a Standard desktop/laptop style (1024px +)
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 1024px) {
+
+} */
